fix header overflow

--- a/less/main.less
+++ b/less/main.less
@@ -148,7 +148,7 @@ header {
     position: relative;
     width: 100%;
     min-height: auto;
-    overflow-y: hidden;
+    overflow: hidden;
     color: #FFF;
     background-color: rgba(0, 0, 0, 0.8);
     margin-top: -43px;
